--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -252,6 +252,31 @@
   overflow: scroll;
 }
 
+.dpd_title{
+  width: 100%;
+  height: 45px;
+  background: #39ab8e;
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 3px;
+  box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 1px;
+  &:hover {
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px;
+    text-decoration: none;
+  }
+}
+
+.dpd_content{
+  display: none;
+  padding: 5px;
+  padding-bottom: 2px;
+  background: #C0C0C0;
+  margin-top: -3px;
+}
+
 .ui-timepicker-wrapper {
   overflow-y: auto;
   max-height: 150px;
