--- a/app/views/companies/_invitation_company.html.erb
+++ b/app/views/companies/_invitation_company.html.erb
@@ -16,7 +16,7 @@
       <% cache company do %>
         <% company.cached_invits.each do |user| %>
           <% cache user do %>
-            <%= render 'companies/invited_item', user: user %>
+            <%= render 'companies/invited_item', user: user, company: company %>
           <% end %>
         <% end %>
       <% end %>
