--- a/app/views/companies/_item.html.erb
+++ b/app/views/companies/_item.html.erb
@@ -12,7 +12,7 @@
     </a>
   <% end %>
   <a class="my_btn_del" href="/companies/<%=company.id%>/quit"  data-method="patch" data-remote="true" data-confirm="Etes vous sur de vouloir quitter cette companie ? Tous vos accès seront supprimés définitivement">
-    <span class="fa fa-trash"></span>
+    <span class="fa fa-close"></span>
   </a>
 </div>
 <%- if company.cached_admins.include?(current_user) %>
