--- a/app/views/companies/_user.html.erb
+++ b/app/views/companies/_user.html.erb
@@ -15,7 +15,7 @@
         </a>
       </li>
       <li>
-        <a href="/companies/<%= @company.id%>/upd_role?userid=<%=user.id%>&admin=false" data-method="patch" data-remote="true">
+        <a href="/companies/<%= @company.id%>/upd_role?userid=<%=user.id%>" data-method="patch" data-remote="true">
           <i class="fa fa-user-o" id="fa_icons"></i>
           Collaborateur
         </a>
