--- a/app/views/companies/_invited_item.html.erb
+++ b/app/views/companies/_invited_item.html.erb
@@ -1,8 +1,8 @@
-<div class="my_item" id="invited_item<%=user.id%>">
+<div class="my_item" id="invited_item<%=invit.id%>">
   <div class="my_item_name">
-    <%= user.email %>
+    <%= invit.email %>
   </div>
-  <a href='/companies/<%=company.id%>/del_invit?userid=<%=user.id%>' class='my_btn_del' data-method='patch' data-remote='true' data-confirm="Voulez-vous supprimer l'invitation de cet utilisateur ? ">
+  <a href='/companies/<%=company.id%>/del_invit?userid=<%=invit.id%>' class='my_btn_del' data-method='patch' data-remote='true' data-confirm="Voulez-vous supprimer l'invitation de cet utilisateur ? ">
     <i class="fa fa-trash"></i>
   </a>
 </div>
