--- a/app/views/companies/_invited_item.html.erb
+++ b/app/views/companies/_invited_item.html.erb
@@ -1,5 +1,9 @@
 <div class="my_item" id="invited_item<%=invit.id%>">
+  <%- if invit.user_id.present? %>
+  <div class="my_item_name" style='color: #39ab8e'>
+  <% else %>
   <div class="my_item_name">
+  <% end %>
     <%= invit.email %>
   </div>
   <a href='/companies/<%=company.id%>/del_invit?userid=<%=invit.id%>' class='my_btn_del' data-method='patch' data-remote='true' data-confirm="Voulez-vous supprimer l'invitation de cet utilisateur ? ">
