Create + Fav done! -> Edit + Invit

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,5 +1,5 @@
-<div class="link_sidenav" id="subitem_link_group_h<%=group.id%>" >
-  <a href="#" class="sub_item" id="group_iter<%=group.id%>">
+<div class="link_sidenav" id="group_iter<%=group.id%>" >
+  <a href="#" class="sub_item" >
     <div class="group_icon">
       <%= group.name.capitalize[0]%>
     </div>
