--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -949,3 +949,11 @@ td, th {
   font-size: 22px;
   padding-top: 10px;
 }
+
+#group_company_id{
+  height: 35px;
+  width: 80%;
+  margin: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
