--- a/app/views/groups/new/create.js.erb
+++ b/app/views/groups/new/create.js.erb
@@ -4,6 +4,8 @@ $('.item_list_body').not(list).slideUp();
 $(list).slideDown();
 // Append the new element
 $(list).append("<%=  j render partial: 'groups/group', locals: {group: @group} %>");
+$('#group_iter<%=@group.id%>').hide();
+$('#group_iter<%=@group.id%>').slideDown();
 // Scroll Bottom
 var height = $(list)[0].scrollHeight;
 $(list).scrollTop(height);
