--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -12,11 +12,11 @@
     </div>
   </a>
   <%- if group.pend_req != 0 && group.cached_admins.include?(current_user) %>
-    <a href="/groups/<%=group.id%>/editor" data-method="patch" data-remote="true"class="fa fa-user sidenav_btn_request" data-toggle="tooltip" data-placement="right"  title="Editer le groupe"></a>
+    <a href="/groups/<%=group.id%>/editor" data-method="patch" data-remote="true"class="fa fa-user sidenav_btn_request" data-toggle="tooltip" data-placement="left"  title="Editer le groupe"></a>
     <span class="label label-danger pend_req"><%=group.pend_req%></span>
   <% else %>
     <% unless group.cat == 2 %>
-      <a href="/groups/<%=group.id%>/editor" data-method="patch" data-remote="true"class="fa fa-pencil sidenav_btn_edit" data-toggle="tooltip" data-placement="right"  title="Editer le groupe"></a>
+      <a href="/groups/<%=group.id%>/editor" data-method="patch" data-remote="true"class="fa fa-pencil sidenav_btn_edit" data-toggle="tooltip" data-placement="left"  title="Editer le groupe"></a>
     <% end %>
   <% end %>
   <br>
