--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,6 +305,11 @@
   margin: 0;
 }
 
+.pagination{
+  margin: 0;
+  margin-top: 5px;
+}
+
 
 
 /********************************************************************/
