Company invitations done -> Post

--- a/app/views/companies/_pend_invits.html.erb
+++ b/app/views/companies/_pend_invits.html.erb
@@ -1,4 +1,4 @@
-<div class="my_item" id="invit_iter<%=c.id%>">
+<div class="my_item" id="company_invit_iter<%=c.id%>">
   <div class="my_item_name">
     <%= c.name %>
   </div>
