Post + Element Done -> Question system

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,1 +1,43 @@
-<%= @group.name%>
+<!-- New Post -->
+<title><%=@group.name%></title>
+<div class="panel panel-white post post_new">
+  <%= simple_form_for(Post.new, remote: true) do |f| %>
+    <%= f.hidden_field :group_id, :value => @group.id %>
+    <div class="post-heading">
+      <div class="form-inputs">
+        <%= f.text_area :content, label: false, class: "form-control", placeholder: "Faites passez un message"%>
+      </div>
+    </div>
+    <!-- Elements Area -->
+    <%- if @elements.any? %>
+      <div class="post_elements" style="display: block">
+        <hr style='margin: 7px;'>
+          <div class="new_post_elements_list">
+            <% @elements.each do |e| %>
+              <%= render 'posts/element', element: e%>
+            <% end %>
+          </div>
+        <hr style='margin: 7px; margin-top: 2px;'>
+      </div>
+    <% else %>
+      <div class="new_post_elements">
+        <hr style='margin: 7px;'>
+          <div class="new_post_elements_list">
+          </div>
+        <hr style='margin: 7px; margin-top: 2px;'>
+      </div>
+      <%= f.hidden_field :element_counter, :value => 0 %>
+    <% end %>
+    <!-- /Elements Area -->
+    <div class="post_footer">
+      <!-- Elements Btn -->
+      <a class="fa fa-file-o post_new_btn" href="/groups/<%=@group.id%>/new_element?idz=1" data-method="patch" data-remote="true"></a>
+      <a class="fa fa-bar-chart post_new_btn" href="/groups/<%=@group.id%>/new_element?idz=2" data-method="patch" data-remote="true"></a>
+      <a class="fa fa-thumb-tack post_new_btn" href="/groups/<%=@group.id%>/new_element?idz=3" data-method="patch" data-remote="true"></a>
+      <a class="fa fa-calendar post_new_btn" href="/groups/<%=@group.id%>/new_element?idz=4" data-method="patch" data-remote="true"></a>
+      <!-- /Elements Btn -->
+      <%= f.button :submit, "Créer le post", class: "btn btn-success pull-right post_new_submit" %>
+    </div>
+  <% end %>
+</div> 
+<!-- /New Post -->
