--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -26,7 +26,7 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <% cache post do %>
+    <% cache [post, "post" ,current_user.id] do %>
       <%= render 'posts/post', post: post %>
     <% end %>
   <% end %>
