Task implemented + ElmCreate -> ElmUpd (Task/list)

--- a/app/views/posts/elm_new.js.erb
+++ b/app/views/posts/elm_new.js.erb
@@ -1,4 +1,4 @@
-$('#NewQuestionPost').modal('hide');
+$('#NewElementPost').modal('hide');
 <%- if @post.nil? %>
   var post_element = $('#post_elements')
 <% else %>
