--- a/app/views/tasks/elm/new.js.erb
+++ b/app/views/tasks/elm/new.js.erb
@@ -1,3 +1,3 @@
 $('#NewElementPost').remove();
-$('body').prepend("<%= j render partial: 'questions/elm/new' %>");
+$('body').prepend("<%= j render partial: 'tasks/elm/new' %>");
 $('#NewElementPost').modal('toggle');
