--- a/app/views/posts/_element.html.erb
+++ b/app/views/posts/_element.html.erb
@@ -6,6 +6,10 @@
     </a>
     <a href="/elm_del?elmid=<%=element.id%>" class="fa fa-close element_new_post_delete" data-method="patch" data-remote="true" data-confirm="Etes vous sur de vouloir supprimer ce sondage ?"></a>
   <% elsif element.cat == 3 %>
+    <a href="/elm_upd?elmid=<%=element.id%>" data-method="patch" data-remote="true" class='element_title' data-toggle="tooltip" data-placement="top" title="<%= element.task.title%>">
+     Tâche
+    </a>
+    <a href="/elm_del?elmid=<%=element.id%>" class="fa fa-close element_new_post_delete" data-method="patch" data-remote="true" data-confirm="Etes vous sur de vouloir supprimer cette tâche ?"></a>
   <% elsif element.cat == 4 %>
   <% end %>
   <script>
